# ConfIDent-schema

./: LICENSE  Makefile  README.md  confident_schema_excelgen_0.0.1.xlsx  setup.cfg  setup.py
ConfIDent_schema/: confident_schema.py
ConfIDent_schema/json/: confident_schema.json
ConfIDent_schema/jsonld/: confident_schema.context.jsonld  confident_schema.model.context.jsonld
ConfIDent_schema/jsonschema/: confident_schema.schema.json
docs/: index.html  sitemap.xml
docs/AcademicEvent/: index.html
docs/AcademicEventSeries/: index.html
docs/AcademicEventSeries_academic_fields/: index.html
docs/AcademicEventSeries_context_info/: index.html
docs/AcademicEventSeries_doi/: index.html
docs/AcademicEventSeries_dpbl_id/: index.html
docs/AcademicEventSeries_gnd_id/: index.html
docs/AcademicEventSeries_id/: index.html
docs/AcademicEventSeries_landing_page/: index.html
docs/AcademicEventSeries_metrics/: index.html
docs/AcademicEventSeries_organizers/: index.html
docs/AcademicEventSeries_process_name/: index.html
docs/AcademicEventSeries_publications/: index.html
docs/AcademicEventSeries_series_of/: index.html
docs/AcademicEventSeries_sponsors/: index.html
docs/AcademicEventSeries_topics/: index.html
docs/AcademicEventSeries_website/: index.html
docs/AcademicEventSeries_wikicfp_id/: index.html
docs/AcademicEvent_academic_fields/: index.html
docs/AcademicEvent_doi/: index.html
model/: CONFIG.yaml  confident_test_data.yaml  context.json  doi_metadata_vivo.json  doi_metadata_vivo2020.json  test.ttl
tests/: test_input_against_model.py
(+258 files in other folders)
