[metadata]
name = ConfIDent_schema
url = https://github.com/stroemphi/ConfIDent-schema
author = Philip Strömert
author_email = philip.stroemert@tib.eu
summary = A model to describe academic events and event series.
description = A model to describe academic events and event series.
long_description = A model to describe academic events and event series.
home_page = https://stroemphi.github.io/ConfIDent_schema
license = CC0 1.0 Universal
python_requires = >=3.7
classifiers = 
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Information Technology
    License :: Attribution 4.0 International (CC BY 4.0) 
keywords = 
    linkml
    LOD
    Modeling
    Linked open data
    model

[options]
include_package_data = True

[files]
packages =
    ConfIDent_schema

data-files = ConfIDent_schema/model = ConfIDent_schema/model/*
    ConfIDent_schema/jsonld_context = ConfIDent_schema/jsonld_context/*
    ConfIDent_schema/json_schema = ConfIDent_schema/json_schema/*
    ConfIDent_schema/model = ConfIDent_schema/model/*


